[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "dimutex"
license = "MIT"
author = "nico-lab"
author-email = "gram@nico-lab.com"
requires-python = ">=3.6"
classifiers = ["Private :: Do Not Upload"]
requires = [
    "aiohttp",
    "gcloud-aio-auth",
]

[tool.flit.metadata.requires-extra]
test = [
    "pytest>=6.2.0",
    "pytest-asyncio",
    "pytest-cov",
]
lint = [
    "bandit",
    "flake8",
    "isort",
    "mypy",
    "unify",
    "yamllint",
]

[tool.isort]
profile = "django"
lines_after_imports = 2
skip = ".venvs/"

[tool.pytest.ini_options]
addopts = [
    "--cov=dimutex",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-report=term-missing:skip-covered",
    "--cov-fail-under=95",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "    pass",
]

[tool.coverage.run]
branch = true

[tool.mypy]
files = ["dimutex", "tests"]
python_version = 3.9
ignore_missing_imports = true
show_error_codes = true

# Settings making mypy checks harder.
# If something here produces too many false-positives,
# consider turning it off.
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
warn_redundant_casts = true
warn_unreachable = true
# warn_unused_ignores = true
