[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dimutex"
authors = [
    {name = "Gram", email = "gram@orsinium.dev"},
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.6"
dynamic = ["version", "description"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Topic :: Software Development",
]
keywords = [
    "mutex",
    "google",
    "google cloud",
    "gcs",
    "gcp",
    "microservices",
]
dependencies = [
    "aiohttp",
    "gcloud-aio-auth",
]

[project.optional-dependencies]
test = [
    "pytest>=6.2.0",
    "pytest-asyncio",
    "pytest-cov",
]
lint = [
    "bandit",
    "flake8",
    "isort",
    "mypy",
    "unify",
]

[tool.isort]
profile = "django"
lines_after_imports = 2
skip = ".venvs/"

[tool.pytest.ini_options]
addopts = [
    "--cov=dimutex",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-report=term-missing:skip-covered",
    "--cov-fail-under=95",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "    pass",
]

[tool.coverage.run]
branch = true

[tool.mypy]
files = ["dimutex", "tests"]
python_version = 3.9
ignore_missing_imports = true
show_error_codes = true

# Settings making mypy checks harder.
# If something here produces too many false-positives,
# consider turning it off.
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
warn_redundant_casts = true
warn_unreachable = true
# warn_unused_ignores = true
